# cargo-release-issue-701

./: Cargo.toml
.cargo/: config.toml
crates/issue701/: Cargo.toml
